Style entities loader

--- a/pontoon/base/static/css/translate.css
+++ b/pontoon/base/static/css/translate.css
@@ -627,6 +627,10 @@ body > header aside p {
 
 #entitylist .loading {
   display: none;
+  background: #272A2F;
+  color: #7BC876;
+  font-size: 30px;
+  padding: 5px 0 10px;
 }
 
 .advanced #entitylist,
