--- a/pontoon/base/templates/translate.html
+++ b/pontoon/base/templates/translate.html
@@ -209,7 +209,7 @@
       <h2 id="not-on-page">Not on the current page</h2>
       <ul class="uneditables"></ul>
       <h3 class="no-match"><div class="fa fa-exclamation-circle"></div>No results</h3>
-      <h3 class="loading"><div class="fa fa-exclamation-circle"></div>Loading entities</h3>
+      <h3 class="loading"><div class="fa fa-refresh fa-spin"></div></h3>
     </div>
   </div>
 
