--- a/pontoon/base/templates/translate.html
+++ b/pontoon/base/templates/translate.html
@@ -191,6 +191,7 @@
       <div id="filter" class="select" data-current-filter="all">
         <div class="button selector all">
           <span class="status fa"></span>
+          <span class="caret-down fa"></span>
           <span class="title">All</span>
         </div>
         <div class="menu">
