--- a/pontoon/base/templates/locale_selector.html
+++ b/pontoon/base/templates/locale_selector.html
@@ -64,13 +64,13 @@
     {% if part and locale %}
     <div class="static-links">
       <a href="{{ url('pontoon.teams') }}">
-        <div class="all-teams">
-          <span class="title">All Teams</span>
+        <div>
+          <span class="title">All Teams Dashboard</span>
         </div>
       </a>
       <a href="{{ url('pontoon.locale', locale.code) }}">
         <div class="current-team">
-          <span class="title">Current Team</span>
+          <span class="title">Current Team Dashboard</span>
         </div>
       </a>
     </div>
