--- a/pontoon/base/templates/project_selector.html
+++ b/pontoon/base/templates/project_selector.html
@@ -73,15 +73,20 @@
 
     {% if part and locale %}
     <div class="static-links">
-      <a href="{{ url('pontoon.projects') }}">
+      <section class="internal">
         <div class="all-projects">
-          <span class="title">All Projects</span>
+          <span class="name title" data-name="All Projects" data-slug="all-projects" data-parts="{{ {locale.code: [{ 'title': 'all-resources', 'resource__path': [] }]}|to_json }}">All Projects</span>
+        </div>
+      </section>
+      <a href="{{ url('pontoon.projects') }}">
+        <div>
+          <span class="title">All Projects Dashboard</span>
         </div>
       </a>
       {% if project %}
       <a href="{{ url('pontoon.project', project.slug) }}">
         <div class="current-project">
-          <span class="title">Current Project</span>
+          <span class="title">Current Project Dashboard</span>
         </div>
       </a>
       {% endif %}
