--- a/pontoon/base/static/css/translate.css
+++ b/pontoon/base/static/css/translate.css
@@ -253,8 +253,11 @@ body > header .locale.select {
 }
 
 .menu .static-links {
-  border-top: 1px solid #5E6475;
   font-weight: 300;
+}
+
+.menu .static-links:not(.all-projects) {
+  border-top: 1px solid #5E6475;
   margin-top: 5px;
   padding-top: 5px;
 }
