--- a/pontoon/base/templates/project_selector.html
+++ b/pontoon/base/templates/project_selector.html
@@ -75,7 +75,7 @@
     <div class="static-links">
       <section class="internal">
         <div class="all-projects">
-          <span class="name title" data-name="All Projects" data-slug="all-projects" data-parts="{{ {locale.code: locale.parts_stats()}|to_json }}">All Projects</span>
+          <span class="name title" data-name="All Projects" data-slug="all-projects" data-parts="{{ {locale.code: [{ 'title': 'all-resources', 'resource__path': [] }]}|to_json }}">All Projects</span>
         </div>
       </section>
       <a href="{{ url('pontoon.projects') }}">
